# project-chiang-m-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Makefile  README.md  coach_config.yaml  delete_all_intervals_workouts.py  pyproject.toml  setup_keys.py  test_coach_sync.py
.github/workflows/: ci.yml
docs/: seasonal_planning_prompt.md
scripts/: README.md
scripts/admin/: cleanup_events.py  delete_workouts.py
scripts/legacy/: test_coach_sync.py
src/: config.py
src/gemini_coach/: config.py
src/gemini_coach/clients/: google_calendar.py  intervalicu.py
src/gemini_coach/models/: workout.py
src/llm-coach/clients/: google_calendar.py  intervalicu.py
src/llm_coach/: __main__.py  cli.py  config.py  factory.py  logger.py
src/llm_coach/clients/: gemini.py  google_calendar.py  intervalicu.py  local_llm.py
src/llm_coach/interfaces/: llm.py  workout_source.py
src/llm_coach/models/: strength_workout.py  workout.py
src/llm_coach/services/: coach.py  workout_tracker.py
src/llm_coach/sources/: calendar_source.py
src/models/: workout.py
src/project_chiang_m_ai/: __main__.py  cli.py  config.py  factory.py  logger.py
src/project_chiang_m_ai/brains/: auto_brain.py  base_calendar_brain.py  calendar_brain.py  file_brain.py
src/project_chiang_m_ai/clients/: gemini.py  google_calendar.py  intervalicu.py  local_platform.py  trainingpeaks.py
src/project_chiang_m_ai/interfaces/: __init__.py  brain.py  calendar.py  llm.py  platform.py  workout_source.py
src/project_chiang_m_ai/models/: __init__.py  strength_workout.py  workout.py
src/project_chiang_m_ai/services/: coach.py  workout_tracker.py
src/project_chiang_m_ai/sources/: __init__.py  calendar_source.py
src/project_chiang_m_ai/templates/prompts/workout_adaptation/: llm_system_prompt.txt  llm_user_prompt.txt
src/project_chiang_m_ai/utils/: prompt_builder.py
templates/: bike_workout_vma.json  run_workout_vma.json  strength_workout.json  workout_vma.json
templates/prompts/workout_adaptation/: llm_system_prompt.txt  llm_user_prompt.txt
tests/: test_auto_brain.py  test_basics.py  test_formatters.py  test_gemini_client.py  test_models.py  test_prompt_builder.py  test_sync_flow.py  test_tracker_persistence.py  test_trainingpeaks_client.py
