[project]
name = "project_chiang_m_ai"
version = "0.1.0"
description = "Project Chiang M-AI: AI training assistant connecting your calendars to Intervals.icu."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "nakmuaycoder"}
]
license = { text = "MIT" }

# Main dependencies
dependencies = [
    "requests>=2.32.0",          # To talk to the Intervals.icu API
    "python-dotenv>=1.0.1",      # To manage API keys via a .env file
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "google-api-python-client>=2.188.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "python-dateutil>=2.9.0.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Specific configuration for uv (optional but recommended)
[tool.uv]
[dependency-groups]
dev = [
    "ruff>=0.9.1",
    "pre-commit>=4.0.1",
    "detect-secrets>=1.5.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=Errors, F=Pyflakes, I=Isort (sorts imports)
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/project_chiang_m_ai"]
